force-app/main/default/objects/SIOC__SIOCInteraction__c/SIOC__SIOCInteraction__c.object-meta.xml
<CustomObject>
    <description>The SIOC Interaction object logs every instance that the system interacts with any SIOC integration vendor.</description>
    <label>SIOC Interaction</label>
    <nameField>
        <displayFormat>SIOC-INT-{00000}</displayFormat>
        <label>SIOC Interaction</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SIOC Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>