force-app/main/default/objects/SIOC__SIOCInteraction__c/fields/SIOC__Action__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Action__c</fullName>
    <description>The system automatically populates this text field with the logged action.</description>
    <inlineHelpText>This system-populated field displays the logged action.</inlineHelpText>
    <label>Action</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>