force-app/main/default/objects/SIOC__SIOCInteraction__c/fields/SIOC__Comment__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Comment__c</fullName>
    <description>The user populates this optional text field with  the most recent comment for this interaction. By default, it is blank.</description>
    <inlineHelpText>The user populates this optional text field with  the most recent comment for this interaction. By default, it is blank.</inlineHelpText>
    <label>Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>