force-app/main/default/objects/SIOC__SIOCInteraction__c/fields/SIOC__Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Correlation_Id__c</fullName>
    <description>The system automatically populates this required string field with an ID that refers to all events and activities in the scope of this transaction.</description>
    <inlineHelpText>This system-populated required field displays an ID that refers to all events and activities in the scope of this transaction.</inlineHelpText>
    <label>Correlation ID</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>