force-app/main/default/objects/SIOC__SIOCInteraction__c/fields/SIOC__Interaction_Type__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Interaction_Type__c</fullName>
    <description>The system automatically populates this picklist with the interaction type.</description>
    <inlineHelpText>This system-populated picklist displays the interaction type.</inlineHelpText>
    <label>Interaction Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Verification</fullName>
            </value>
            <value>
                <fullName>Business Lookup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>