force-app/main/default/objects/SIOC__SIOCInteraction__c/fields/SIOC__Is_Successful__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Is_Successful__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system automatically selects this checkbox if the interaction is successful. By default, it is not selected.</description>
    <inlineHelpText>This system-populated field selects this checkbox if the SIOC interaction is successful.</inlineHelpText>
    <label>Is Successful</label>
    <type>Checkbox</type>
</CustomField>