force-app/main/default/objects/SIOC__SIOCInteraction__c/fields/SIOC__Message__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Message__c</fullName>
    <description>The system automatically populates this text field with the most recent message from the interaction (such as an error or last recorded success state). By default, it is blank.</description>
    <inlineHelpText>This system-populated field displays the most recent message from the interaction (such as an error or last recorded success state).</inlineHelpText>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>