force-app/main/default/objects/SIOC__SIOCInteraction__c/fields/SIOC__Vendor_Provider__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Vendor_Provider__c</fullName>
    <description>The system automatically populates this text field with the fully qualified Apex class name used for this interaction.</description>
    <inlineHelpText>This system-populated required field displays the fully qualified Apex class name used for this interaction.</inlineHelpText>
    <label>Vendor Provider</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>