force-app/main/default/objects/SIOC__SIOCInteraction__c/fields/SIOC__Vendor_Ref_Num__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Vendor_Ref_Num__c</fullName>
    <description>The system automatically populates this text field with the reference number provided by the vendor for this application.</description>
    <inlineHelpText>This system-populated required field displays the reference number provided by the vendor for this application.</inlineHelpText>
    <label>Vendor Reference Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>