force-app/main/default/objects/SIOC__SIOCInteraction__c/fields/SIOC__Vendor_Status__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Vendor_Status__c</fullName>
    <description>The system automatically populates this required text field with the vendor status to which this transaction was set.</description>
    <inlineHelpText>This system-populated required field displays the vendor status to which this transaction was set when created.</inlineHelpText>
    <label>Vendor Status</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>